--- a/Sagemath and classic ciphers.ipynb
+++ b/Sagemath and classic ciphers.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -177,7 +177,7 @@
        "[0, 1, 2, 3, 4, 5, 6]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -218,17 +218,42 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n",
-      "4\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2*x"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(x + x) \n",
-    "print(x * x)"
+    "x + x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "x^2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x * x"
    ]
   },
   {
@@ -244,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -257,7 +282,7 @@
        "GONAVYBEATARMY"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -286,7 +311,7 @@
        "HPOBWZCFBUBSNZ"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -312,7 +337,7 @@
        "GONAVYBEATARMY"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -335,32 +360,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 LRZZOACZZQTDZYPESLEXLVPDFDHTDPC\n",
-      "1 KQYYNZBYYPSCYXODRKDWKUOCECGSCOB\n",
-      "2 JPXXMYAXXORBXWNCQJCVJTNBDBFRBNA\n",
-      "3 IOWWLXZWWNQAWVMBPIBUISMACAEQAMZ\n",
-      "4 HNVVKWYVVMPZVULAOHATHRLZBZDPZLY\n",
-      "5 GMUUJVXUULOYUTKZNGZSGQKYAYCOYKX\n",
-      "6 FLTTIUWTTKNXTSJYMFYRFPJXZXBNXJW\n",
-      "7 EKSSHTVSSJMWSRIXLEXQEOIWYWAMWIV\n",
-      "8 DJRRGSURRILVRQHWKDWPDNHVXVZLVHU\n",
-      "9 CIQQFRTQQHKUQPGVJCVOCMGUWUYKUGT\n",
-      "10 BHPPEQSPPGJTPOFUIBUNBLFTVTXJTFS\n",
-      "11 AGOODPROOFISONETHATMAKESUSWISER\n",
-      "12 ZFNNCOQNNEHRNMDSGZSLZJDRTRVHRDQ\n",
-      "13 YEMMBNPMMDGQMLCRFYRKYICQSQUGQCP\n",
-      "14 XDLLAMOLLCFPLKBQEXQJXHBPRPTFPBO\n",
-      "15 WCKKZLNKKBEOKJAPDWPIWGAOQOSEOAN\n",
-      "16 VBJJYKMJJADNJIZOCVOHVFZNPNRDNZM\n",
-      "17 UAIIXJLIIZCMIHYNBUNGUEYMOMQCMYL\n",
-      "18 TZHHWIKHHYBLHGXMATMFTDXLNLPBLXK\n",
-      "19 SYGGVHJGGXAKGFWLZSLESCWKMKOAKWJ\n",
-      "20 RXFFUGIFFWZJFEVKYRKDRBVJLJNZJVI\n",
-      "21 QWEETFHEEVYIEDUJXQJCQAUIKIMYIUH\n",
-      "22 PVDDSEGDDUXHDCTIWPIBPZTHJHLXHTG\n",
-      "23 OUCCRDFCCTWGCBSHVOHAOYSGIGKWGSF\n",
-      "24 NTBBQCEBBSVFBARGUNGZNXRFHFJVFRE\n",
-      "25 MSAAPBDAARUEAZQFTMFYMWQEGEIUEQD\n"
+      "(0, LRZZOACZZQTDZYPESLEXLVPDFDHTDPC)\n",
+      "(1, KQYYNZBYYPSCYXODRKDWKUOCECGSCOB)\n",
+      "(2, JPXXMYAXXORBXWNCQJCVJTNBDBFRBNA)\n",
+      "(3, IOWWLXZWWNQAWVMBPIBUISMACAEQAMZ)\n",
+      "(4, HNVVKWYVVMPZVULAOHATHRLZBZDPZLY)\n",
+      "(5, GMUUJVXUULOYUTKZNGZSGQKYAYCOYKX)\n",
+      "(6, FLTTIUWTTKNXTSJYMFYRFPJXZXBNXJW)\n",
+      "(7, EKSSHTVSSJMWSRIXLEXQEOIWYWAMWIV)\n",
+      "(8, DJRRGSURRILVRQHWKDWPDNHVXVZLVHU)\n",
+      "(9, CIQQFRTQQHKUQPGVJCVOCMGUWUYKUGT)\n",
+      "(10, BHPPEQSPPGJTPOFUIBUNBLFTVTXJTFS)\n",
+      "(11, AGOODPROOFISONETHATMAKESUSWISER)\n",
+      "(12, ZFNNCOQNNEHRNMDSGZSLZJDRTRVHRDQ)\n",
+      "(13, YEMMBNPMMDGQMLCRFYRKYICQSQUGQCP)\n",
+      "(14, XDLLAMOLLCFPLKBQEXQJXHBPRPTFPBO)\n",
+      "(15, WCKKZLNKKBEOKJAPDWPIWGAOQOSEOAN)\n",
+      "(16, VBJJYKMJJADNJIZOCVOHVFZNPNRDNZM)\n",
+      "(17, UAIIXJLIIZCMIHYNBUNGUEYMOMQCMYL)\n",
+      "(18, TZHHWIKHHYBLHGXMATMFTDXLNLPBLXK)\n",
+      "(19, SYGGVHJGGXAKGFWLZSLESCWKMKOAKWJ)\n",
+      "(20, RXFFUGIFFWZJFEVKYRKDRBVJLJNZJVI)\n",
+      "(21, QWEETFHEEVYIEDUJXQJCQAUIKIMYIUH)\n",
+      "(22, PVDDSEGDDUXHDCTIWPIBPZTHJHLXHTG)\n",
+      "(23, OUCCRDFCCTWGCBSHVOHAOYSGIGKWGSF)\n",
+      "(24, NTBBQCEBBSVFBARGUNGZNXRFHFJVFRE)\n",
+      "(25, MSAAPBDAARUEAZQFTMFYMWQEGEIUEQD)\n"
      ]
     }
    ],
@@ -371,12 +396,12 @@
     "\n",
     "# We try all the keys\n",
     "for i in range(26):\n",
-    "\t\tprint(i, CS.deciphering(i, c))"
+    "    print(i, CS.deciphering(i, c))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -389,19 +414,19 @@
        "AGOODPROOFISONETHATMAKESUSWISER"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# k = 11 makes sense\n",
-    "CS.deciphering(11,c)"
+    "CS.deciphering(11, c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -436,7 +461,7 @@
        " Y: 0.0348837209302326}"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,8 +481,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Entropy\n",
+    "Given a message $m$ taken from a set of messages $\\{m_1, \\dots, m_N\\}$ with probabilities $p(m_i)\\ 1\\leq i \\leq N$, the source entropy is\n",
+    "\n",
+    "$H(m) = -\\sum_{i=1}^N p_i \\log_2 p_i$\n",
+    "\n",
+    "Source entropy measures the minimum number of bits necessary to encode the source messages."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1606,7 +1643,117 @@
     }
    },
    "source": [
-    "The ciphertext \"KDDKMU\" has been encrypted with a Ceasar cipher. Find the plaintext using brute force attack."
+    "* The ciphertext \"KDDKMU\" has been encrypted with a Ceasar cipher. Find the plaintext using a brute force attack."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Shift cryptosystem on Free alphabetic string monoid on A-Z"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CS = ShiftCryptosystem( AlphabeticStrings() )\n",
+    "CS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KDDKMU"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = \"\"\"KDDKMU\"\"\"\n",
+    "c = CS.encoding(m)\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, KDDKMU)\n",
+      "(1, JCCJLT)\n",
+      "(2, IBBIKS)\n",
+      "(3, HAAHJR)\n",
+      "(4, GZZGIQ)\n",
+      "(5, FYYFHP)\n",
+      "(6, EXXEGO)\n",
+      "(7, DWWDFN)\n",
+      "(8, CVVCEM)\n",
+      "(9, BUUBDL)\n",
+      "(10, ATTACK)\n",
+      "(11, ZSSZBJ)\n",
+      "(12, YRRYAI)\n",
+      "(13, XQQXZH)\n",
+      "(14, WPPWYG)\n",
+      "(15, VOOVXF)\n",
+      "(16, UNNUWE)\n",
+      "(17, TMMTVD)\n",
+      "(18, SLLSUC)\n",
+      "(19, RKKRTB)\n",
+      "(20, QJJQSA)\n",
+      "(21, PIIPRZ)\n",
+      "(22, OHHOQY)\n",
+      "(23, NGGNPX)\n",
+      "(24, MFFMOW)\n",
+      "(25, LEELNV)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(26):\n",
+    "    print(i, CS.deciphering(i, c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ATTACK"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "CS.deciphering(10, c)"
    ]
   },
   {
@@ -1617,7 +1764,84 @@
     }
    },
    "source": [
-    "Encrypt the plaintext \"CLEOPATRA\" using an affine cipher with encryption function y=7x+8."
+    "* Encrypt the plaintext \"CLEOPATRA\" using an affine cipher with encryption function y=7x+8."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Affine cryptosystem on Free alphabetic string monoid on A-Z"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = AffineCryptosystem( AlphabeticStrings() )\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WHKCJILXI"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P = A.encoding(\"CLEOPATRA\")\n",
+    "a, b = (7, 8)\n",
+    "C = A.enciphering(a, b, P)\n",
+    "C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CLEOPATRA"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P = A.deciphering(a, b, C)\n",
+    "P"
    ]
   },
   {
@@ -1628,48 +1852,55 @@
     }
    },
    "source": [
-    "The ciphertext \"MZDVEZC\" has been obtained using an affine cipher with encryption function y=5x+12 , Find the plaintext."
+    "* The ciphertext \"MZDVEZC\" has been obtained using an affine cipher with encryption function y=5x+12. Find the plaintext."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ANTHONY"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m = \"\"\"MZDVEZC\"\"\"\n",
+    "C = A.encoding(m)\n",
+    "a, b = (5, 12)\n",
+    "P = A.deciphering(a, b, C)\n",
+    "P"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.0",
-   "language": "sage",
+   "display_name": "SageMath 8.1",
+   "language": "",
    "name": "sagemath"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
